# tacit

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README-PYPI.md  README.md  SECURITY.md  archetypes.yaml  dashforge.spec  dashforge.yaml.example  docker-compose.dev.yml  docker-compose.yml  opus_dev.json  pyproject.toml  requirements.txt  signals.yaml  tacit.spec  tacit.yaml.example
.github/workflows/: ci.yml  release-binaries.yml  release.yml  vendor-spec-refresh.yml
dashforge/: __init__.py  cache.py  catalog.py  cli.py  config.py  dashboard_ingest.py  dashboard_uploads.py  dependencies.py  errors.py  evidence.py  evidence_artifacts.py  feedback.py  history.py  logging.py  main.py  pipeline.py  pipeline_discovery.py  ranking.py  signal_inference.py  signals.py  validation.py
dashforge/agents/: intent.py  llm.py  llm_json.py  metrics_discovery.py  query_builder.py  synonyms.py
dashforge/api/: __init__.py  app.py  dependencies.py  lifespan.py  security.py
dashforge/archetypes/: engine.py  schema.py  templates.py
dashforge/backends/: __init__.py  base.py  grafana.py  signalfx.py
dashforge/context/: __init__.py  a2a_provider.py  base.py  enrichment.py  mcp_provider.py  rag_api_provider.py  registry.py
dashforge/dashboard_ingest/: __init__.py  archetype_generation.py  features.py  promql.py  reports.py  service.py  signalflow.py
dashforge/data/: archetypes.yaml  signals.yaml
dashforge/grafana/: client.py  dashboard.py  datasource.py
dashforge/integrations/: slack.py
dashforge/models/: schemas.py
dashforge/pipeline/: __init__.py  completion.py  context.py  failures.py  recording.py  runner.py  side_effects.py  validation.py
dashforge/query_parsing/: __init__.py
dashforge/signalfx/: __init__.py  client.py  discovery.py  publisher.py
dashforge/signals/: __init__.py  confidence.py  learning_index.py  migrations.py  resolution.py  schema.py  store.py
dashforge/static/: index.html
demo/: README.md  checkout-service-incident.grafana.json  clickstack-payment-cache.grafana.json  gamma_pilot.py  load_clickstack_metrics.sh  rebase_otlp_metrics.py  run_checkout_incident_demo.sh  run_clickstack_metrics_demo.sh
demo/scenarios/: clickstack-payment-cache.yaml  gamma-pilot-dashboard.json
dev/: e2e_test.py  test_validation.py
dev/fake_app/: app.py
dev/otel-collector/: config.yml
dev/prometheus/: prometheus.yml
docs/: accuracy-gate-evaluation.md  evaluation-grounding-benchmark-v1.md  evaluation.md  generated-archetype-evaluation-roadmap.md  operational-cognition.md  operational-knowledge.md  telemetry-dataset-testing-roadmap.md  vendor-permissions.md
docs/adr/: 001-investigation-first.md  002-operational-intelligence-before-stateful-sessions.md  003-emergent-signals-over-fixed-taxonomy.md  004-dashboard-ingestion-onboarding.md  005-deterministic-candidate-signal-inference.md  006-conservative-auto-teach.md  007-lightweight-investigation-plans.md  008-dashboards-as-evidence-artifacts.md  009-operational-usefulness-evaluation.md  010-incident-management-integrations-downstream.md  011-logs-traces-as-evidence-types.md  012-lightweight-service-context.md  013-adoption-time-to-value-and-trust.md  014-dashforge-is-not-a-system-of-record.md  014-tacit-is-not-a-system-of-record.md  015-evidence-lifecycle.md  016-contextual-vs-telemetry-evidenced-ranking.md  017-artifact-learning-framework.md  018-investigation-contract.md  019-governed-knowledge-authority.md  019-operational-knowledge-lifecycle.md  020-generated-archetypes-shadow-before-lifecycle.md  021-generated-archetype-scope-context.md  README.md
docs/research/: opensre-integration-review.md
docs/results/: gamma-naming-diagnostic-2026-06-20.md  gamma-pilot-baseline-2026-06-19.md  gamma-pre-evidence-model-baseline-2026-06-22.md
scripts/: build.sh
tacit/: __init__.py  alert_ingest.py  artifact_learning.py  assess.py  catalog.py  cli.py  config.py  contextual_culprit_ranking.py  culprit_ranking.py  dashboard_uploads.py  demo_flow.py  dependencies.py  errors.py  evaluation_summary.py  evidence.py  evidence_artifacts.py  export_report.py  feedback.py  grounding_benchmark.py  history.py  investigation_bundle.py  investigation_contract.py  investigation_replay.py  logging.py  main.py  operational_learning_benchmark.py  ranking.py  runtime_stores.py  signal_inference.py  validation.py
tacit/agents/: intent.py  intent_fallback.py  llm.py  llm_errors.py  llm_json.py  metrics_discovery.py  query_builder.py  synonyms.py
tacit/api/: app.py  dependencies.py  lifespan.py  security.py
tacit/archetypes/: engine.py  templates.py
tacit/backends/: __init__.py  base.py  grafana.py  signalfx.py
tacit/context/: __init__.py  a2a_provider.py  base.py  enrichment.py  mcp_provider.py  rag_api_provider.py  registry.py
tacit/dashboard_ingest/: __init__.py  archetype_generation.py  features.py  promql.py  reports.py  service.py  signalflow.py
tacit/data/: archetypes.yaml  grounding_benchmark_v1.json  operational_learning_v1.json  signals.yaml
tacit/grafana/: client.py  dashboard.py  datasource.py
tacit/integrations/: pagerduty.py  slack.py
tacit/knowledge/: __init__.py  corroboration.py  entities.py  enums.py  lifecycle.py  migration.py  models.py  normalization.py  repository.py  scope.py  service.py
tacit/models/: schemas.py
tacit/pipeline/: __init__.py  completion.py  context.py  discovery.py  failures.py  progress.py  recording.py  runner.py  (+2 more)
tests/: README.md  README_TESTING.md  seed_signalfx_metrics.py  tacit_validation_prompts.csv  test_azure.py  test_backends.py  test_bedrock.py  test_providers.py  test_registry.py  test_review_fixes.py  test_signalfx_integration.py  test_signalfx_unit.py  test_signals.py  test_structured_logging.py  test_unit.py  validate.py
(+194 files in other folders)
