[project]
name = "dashforge"
version = "0.1.0"
description = "Natural language → Grafana dashboards. AI-powered observability navigation layer."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.49.0",
    "openai>=1.35.0",
    "httpx>=0.27.0",
    "slack-bolt>=1.19.0",
    "slack-sdk>=3.31.0",
    "aiohttp>=3.9.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.2.0",
    "tenacity>=8.4.0",
    "pyyaml>=6.0",
    "truststore>=0.10.4",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.34.116"]

[project.scripts]
dashforge = "dashforge.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "prometheus-client>=0.20.0",
    "ruff>=0.5.0",
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
