[project]
name = "dashforge"
version = "0.1.0"
description = "Natural language → Grafana dashboards. AI-powered observability navigation layer."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.49.0",
    "openai>=1.35.0",
    "httpx>=0.27.0",
    "slack-bolt>=1.19.0",
    "slack-sdk>=3.31.0",
    "aiohttp>=3.9.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.2.0",
    "tenacity>=8.4.0",
    "pyyaml>=6.0",
    "truststore>=0.10.4",
    "click>=8.1.0",
    "rich>=13.0.0",
    "promql-parser>=0.9.0",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.34.116"]

[project.scripts]
dashforge = "dashforge.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "prometheus-client>=0.20.0",
    "ruff>=0.5.0",
    "pyinstaller>=6.0.0",
    "black>=26.5.1",
    "mypy>=2.1.0",
    "types-PyYAML>=6.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: hermetic vendor contract test (mocked HTTP via respx). Run after unit.",
]
# Default `pytest` runs unit only; integration is opt-in via path or -m integration.
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
files = ["dashforge"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[tool.hatch.build.targets.wheel.force-include]
# Ship runtime YAML as package data so installed CLIs and PyInstaller binaries
# load the same bootstrap resources without depending on the working directory.
"dashforge/data/archetypes.yaml" = "dashforge/data/archetypes.yaml"
"dashforge/data/signals.yaml" = "dashforge/data/signals.yaml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
